--- a/AkuteSinglePage - Copy/AkuteSinglePage/Models/AkuteDbModel.Context.tt
+++ b/AkuteSinglePage - Copy/AkuteSinglePage/Models/AkuteDbModel.Context.tt
@@ -2,7 +2,7 @@
 <#@ include file="EF.Utility.CS.ttinclude"#><#@
  output extension=".cs"#><#
 
-const string inputFile = @"AkuteDbModel.edmx";
+const string inputFile = @"AkuteDBModel.edmx";
 var textTransform = DynamicTextTransformation.Create(this);
 var code = new CodeGenerationTools(this);
 var ef = new MetadataTools(this);
