Added romaramsi blog page

--- a/AkuteSinglePage - Copy/AkuteSinglePage/Views/About/Details.cshtml
+++ b/AkuteSinglePage - Copy/AkuteSinglePage/Views/About/Details.cshtml
@@ -34,7 +34,7 @@
                                 <ul class="no-bullets centered inline">
                                     <li><a href="https://twitter.com/romaramsi" target="_blank">Twitter</a></li>
                                     <li><a href="http://instagram.com/romaramsi" target="_blank">Instagram</a></li>
-                                    <li><a href="">Blog</a></li>
+                                    <li><a href="@Url.Action("Romaramsi", "Blog")">Blog</a></li>
                                 </ul>
                             </div>
                             <hr class="clear" />
