--- a/AkuteSinglePage - Copy/AkuteSinglePage/Content/blogs-style.css
+++ b/AkuteSinglePage - Copy/AkuteSinglePage/Content/blogs-style.css
@@ -364,3 +364,14 @@ border: .25em solid #444;
 	width:100%;
 	height:100%;
 }
+
+.black-background
+{
+	background-color:rgba(0,0,0,0.35);
+}
+
+
+.blog-ramsi-screen
+{
+	max-width: 74.65em;
+}
